--- a/Kundenportal/style.css
+++ b/Kundenportal/style.css
@@ -10,6 +10,12 @@ body {
     color: #333;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 header {
     background-color: #333;
     color: #fff;
@@ -79,6 +85,11 @@ footer {
 
 .link:hover {
     background-color: #777;
+}
+
+.link-container {
+    display: flex;
+    justify-content: space-between;
 }
 
 .button {
